Create a home page

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -7,6 +7,9 @@
 
         {% load static %}
 
+        <!-- Font Family -->
+        <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
+
         <!-- Style CSS -->
         <link rel="stylesheet" href="{% static 'homepage/css/design.css' %}">
 
@@ -18,13 +21,40 @@
 
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+        <!-- JS, Popper.js ans jQuery -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
-        <header>
-            <h1>Hello</h1>
-        </header>
+        <section>
+            <header>
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <a class="navbar-brand ml-3" href="#"><img class="img-brand" src="{% static 'homepage/img/logo.png' %}" alt="logo"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+                        aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon bg-light"></span>
+                    </button>
 
+                    <div class="collapse navbar-collapse" id="navbarToggler">
+                        <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
+                            <li class="nav-item mx-4">
+                                <a class="nav-link text-white" href="#"><strong>ACCUEIL </strong><span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item mx-4">
+                                <a class="nav-link text-white" href="#"><strong>CONTACT</strong></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+            {% block firstblock %}{% endblock firstblock %}
+
+        </section>
         {% block content %}{% endblock content %}
+
     </body>
 </html>
