--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -1,4 +1,17 @@
 {% extends 'homepage/base.html' %}
+
+{% block firstblock %}
+<div class="container-fluid h-80">
+    <div class="row h-80">
+        <div class="col-12 h-80 align-im-sl"> <!-- d-flex justify-content-center align-items-center -->
+            <h1 class="text-white size-xl"><strong>FeedEasy</strong></h1>
+            <h2 class="text-white">Rester organisé dans vos repas !</h2>
+        </div>
+    </div>
+</div>
+{% endblock firstblock %}
+
 {% block content %}
-    <h2>Test</h2>
+<h2>Test</h2>
+<p>Ceci est un test de police d'ecriture</p>
 {% endblock content %}
