Add second section for describe the FeedEasy objective

--- a/homepage/static/homepage/css/design.css
+++ b/homepage/static/homepage/css/design.css
@@ -26,6 +26,24 @@ section {
     height: 80%;
 }
 
-.size-xl {
+.margin-b-t {
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+.size-xxl {
     font-size: 80px;
+}
+
+.size-xl {
+    font-size: 50px;
+}
+
+.size-l {
+    font-size: 40px;
+}
+
+.img-desc {
+    height: 150px;
+    width: auto;
 }
