--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -13,26 +13,36 @@
 {% endblock firstblock %}
 
 {% block content %}
-<div class=""></div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 text-center">
-            <h3 class="size-xl margin-b-t testAnimate">L'objectif de FeedEasy !</h3>
+            <h3 class="size-xl margin-b-t testAnimate text-white">L'objectif de FeedEasy !</h3>
         </div>
         <div class="col-12">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-lg-8">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolores corporis laborum quidem ea in! Vel tenetur expedita, ex mollitia in, nobis, vitae commodi repudiandae hic similique quae magni dicta!</p>
+                        <p class="size-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolores corporis laborum quidem ea in! Vel tenetur expedita, ex mollitia in, nobis, vitae commodi repudiandae hic similique quae magni dicta!</p>
                     </div>
                     <div class="col-12 col-lg-4">
-                        <img class="img-fluide img-desc" src="{% static 'homepage/img/logo_complet.png' %}" alt="img_descriptive">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <img class="img-fluide img-desc" src="{% static 'homepage/img/logo_complet.png' %}" alt="img_descriptive">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<p>Ceci est un test de police d'ecriture</p>
+
+<div class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h3 class="size-xl margin-b-t testAnimate text-white">Le defis du temps !</h3>
+            <p class="size-xs text-pos-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis deleniti dolores doloribus consequatur voluptas odit consequuntur mollitia labore, iste commodi eaque, voluptates amet ex quasi at autem expedita illo! Quo?</p>
+        </div>
+    </div>
+</div>
+
 <script src="{% static 'homepage/js/script.js' %}"></script>
 {% endblock content %}
