Test for Parallax effect

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -30,6 +30,9 @@
         <!-- GSAP lib for animated JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
 
+        <!-- Skrollr lib JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
+
     </head>
 
     <body>
