--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -35,6 +35,10 @@
     </div>
 </div>
 
+<div class="parallax-container">
+    <img src="{% static 'homepage/img/food-1351287_1920.jpg' %}" alt="foodimg">
+</div>
+
 <div class="container-fluid mt-5">
     <div class="row">
         <div class="col-12 text-center">
