--- a/homepage/static/homepage/css/design.css
+++ b/homepage/static/homepage/css/design.css
@@ -72,3 +72,10 @@ p {
 .text-pos-right {
     margin-left: 70vh;
 }
+
+.parallax-container {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
