Add parallax effect -> OK

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="parallax-container">
-    <img src="{% static 'homepage/img/food-1351287_1920.jpg' %}" alt="foodimg">
+    <img src="{% static 'homepage/img/food-1351287_1920.jpg' %}" alt="foodimg" id="parallaxImg" data-bottom-top="transform:translate3d(0, 0px, 0)" data-top-bottom="transform:translate3d(0, -300px, 0)">
 </div>
 
 <div class="container-fluid mt-5">
