--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -24,7 +24,7 @@
                     <div class="col-12 col-lg-8">
                         <p class="size-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, dolores corporis laborum quidem ea in! Vel tenetur expedita, ex mollitia in, nobis, vitae commodi repudiandae hic similique quae magni dicta!</p>
                     </div>
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-lg-4 mb-5">
                         <div class="d-flex justify-content-center align-items-center">
                             <img class="img-fluide img-desc" src="{% static 'homepage/img/logo_complet.png' %}" alt="img_descriptive">
                         </div>
@@ -43,7 +43,36 @@
     <div class="row">
         <div class="col-12 text-center">
             <h3 class="size-xl margin-b-t testAnimate text-white">Le defis du temps !</h3>
-            <p class="size-xs text-pos-right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis deleniti dolores doloribus consequatur voluptas odit consequuntur mollitia labore, iste commodi eaque, voluptates amet ex quasi at autem expedita illo! Quo?</p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <p class="text-white">graphique</p>
+                        <div class="graph-block">
+                            <div class="d-flex" id="firstLine">
+                                <div class="rounded-block mx-auto">Test</div>
+                            </div>
+                            <div class="d-flex" id="secondLine">
+                                <div class="rounded-block mx-auto">Test</div>
+                                <div class="rounded-block mx-auto">Test</div>
+                                <div class="rounded-block mx-auto">Test</div>
+                            </div>
+                            <div class="d-flex" id="thirdLine">
+                                <div class="rounded-block mx-auto">Test</div>
+                                <div class="rounded-block mx-auto">Test</div>
+                                <div class="rounded-block mx-auto">Test</div>
+                                <div class="rounded-block mx-auto">Test</div>
+                            </div>
+                            <div class="d-flex" id="fourthLine">
+                                <div class="rounded-block mx-auto">Test</div>
+                                <div class="rounded-block mx-auto">Test</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <p class="size-xs">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis deleniti dolores doloribus consequatur voluptas odit consequuntur mollitia labore, iste commodi eaque, voluptates amet ex quasi at autem expedita illo! Quo?</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
