--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -38,7 +38,7 @@
     <body>
         <section>
             <header>
-                <nav class="navbar navbar-expand-lg navbar-light">
+                <nav class="navbar navbar-expand-lg fixed-top navbar-light">
                     <a class="navbar-brand ml-3" href="#"><img class="img-brand" src="{% static 'homepage/img/logo.png' %}" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
                         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
