--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -35,11 +35,11 @@
     </div>
 </div>
 
-<div class="parallax-container">
+<div class="parallax-container between-section">
     <img src="{% static 'homepage/img/food-1351287_1920.jpg' %}" alt="foodimg" id="parallaxImg" data-bottom-top="transform:translate3d(0, 0px, 0)" data-top-bottom="transform:translate3d(0, -300px, 0)">
 </div>
 
-<div class="container-fluid mt-5">
+<div class="container-fluid between-section">
     <div class="row">
         <div class="col-12 text-center">
             <h3 class="size-xl margin-b-t testAnimate text-white">Le defis du temps !</h3>
@@ -78,9 +78,9 @@
     </div>
 </div>
 
-<div class="container-fluid degrad mt-5">
+<div class="container-fluid between-section">
     <div class="row">
-        <div class="col-12 text-center mt-5">
+        <div class="col-12 text-center mb-5">
             <h3 class="text-white size-xl">Solutions proposées</h3>
         </div>
         <div class="container-fluid">
@@ -119,6 +119,16 @@
                         Doloribus.</p>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid between-section">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h3 class="size-xl text-white mb-5">La solution pour tous</h3>
+            <h4 class="size-m text-white">Engagement de FeedEasy</h4>
+            <p class="size-s">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptas asperiores cum magni quisquam sed sint. Dolorem magni tenetur alias odit, officia corrupti impedit vel optio at necessitatibus, vero quam.</p>
         </div>
     </div>
 </div>
